[package]
name = "urg-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "urg_py"
crate-type = ["cdylib"]

[dependencies]
bstr = "1.1.0"
pyo3 = { version = "0.17.3", features = ["extension-module"] }
urg-rust = { git = "https://github.com/hs-CN/urg-rust.git", version = "0.1.0" }
